Resolves: tdf#101000 ensure unique image names in .docs

(cherry picked from commit 432f605e3287269d1a20383f4eeebf012ee3679d)

Change-Id: Id4f93638ad366b66968e6946a835239beee16942
Reviewed-on: https://gerrit.libreoffice.org/34302
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>